--- a/node-login-dev/docker-compose.yml
+++ b/node-login-dev/docker-compose.yml
@@ -1,14 +1,12 @@
-version: 'version: "3.8"
+version: "3.1"
 services:
   redis:
     image: redis:6
     restart: always
     volumes:
-      - redis_data:/data
+      - redis-data:/data
     ports:
       - 6379:6379
 
 volumes:
-  redis_data:
-
-
+  redis-data:
