--- a/bk-ft-ts/frontend/package.json
+++ b/bk-ft-ts/frontend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "bootstrap": "^5.3.7",
     "express": "^5.1.0"
   },
   "devDependencies": {
